<resources>
    <string name="app_name">SID MOVIL</string>
    <string name="cargando">Cargando</string>
    <string name="usuario">Usuario</string>
    <string name="descargando_configuracion">Descargando Configuración</string>
    <string name="descargando_programacion">Descargando Programación</string>
    <string name="descargando_inventario">Descargando Inventario</string>
    <string name="actualizando_base_datos">Actualizando Base Datos Dispositivo</string>
    <string name="logo">DOLMEN SA ESP</string>
    <string name="municipio">Municipio</string>
    <string name="proceso">Proceso</string>
    <string name="contrato">Contrato</string>
    <string name="nombre_usuario">Digite su Usuario</string>
    <string name="clave_usuario">Digite su clave</string>
    <string name="seleccione">-Seleccione-</string>
    <string name="buscar_elemento">Buscar Elemento</string>
    <string name="titulo_actividad_login">Ingreso a Usuario</string>
    <string name="titulo_perfil_usuario">Mi Perfil</string>
    <string name="titulo_censo_tecnico">Censo Técnico AP</string>
    <string name="titulo_menu">Menú</string>
    <string name="titulo_generar_reporte_dano">Generar Reporte Daño</string>
    <string name="titulo_generar_actividad_operativa">Generar Actividad Operativa</string>
    <string name="titulo_menu_censo_tecnico">Menú Censo Técnico</string>
    <string name="titulo_actualizar_elemento">Actualizar Elemento</string>
    <string name="titulo_crear_elemento">Crear Elemento</string>
    <string name="titulo_censo_carga">Censo de Carga</string>
    <string name="titulo_norma">Norma</string>
    <string name="titulo_accion">Acción</string>
    <string name="alert_tipo_red">Seleccione el Tipo de Red</string>
    <string name="alert_tipo_tension">Seleccione el Tipo de Tensión</string>
    <string name="alert_tipo_estructura">Seleccione el Tipo de Estructura</string>
    <string name="alert_norma_construccion_red">Seleccione la norma de construcción</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_crear_reporte_dano">Crear RD</string>
    <string name="btn_crear_actividad">Crear Actividad</string>
    <string name="btn_crear_elemento">Crear Elemento</string>
    <string name="btn_actualizar_elemento">Actualizar Elemento</string>
    <string name="btn_perfil">Perfil</string>
    <string name="btn_censo_tecnico">Censo Ténico Alumbrado Público</string>
    <string name="btn_recorrido">Recorrido</string>
    <string name="btn_tomar_foto">Tomar Foto</string>
    <string name="btn_borrar_foto">Quitar Foto</string>
    <string name="btn_sincronizar">Sincronizar Pendientes</string>
    <string name="btn_registrar_elemento">Registrar Elemento</string>
    <string name="btn_buscar_elemento">Registrar Elemento</string>
    <string name="btn_mis_actividades">Mis Actividades</string>
    <string name="titulo_alerta">Atención</string>
    <string name="titulo_direccion">Dirección</string>
    <string name="alert_usuario">Digite su usuario</string>
    <string name="alert_clave">Digite su clave</string>
    <string name="alert_servicio_no_encontrado">Servicio no Disponible</string>
    <string name="alert_error_ejecucion">Error de ejeución</string>
    <string name="alert_municipio">Seleccione Municipio</string>
    <string name="alert_proceso">Seleccione el Proceso</string>
    <string name="alert_contrato">Seleccione Contrato</string>
    <string name="alert_conexion">Sin Conexión a Internet</string>
    <string name="alert_error_camara">Error Capturando la Imagen</string>
    <string name="alert_cancelar_camara">Captura de imagen cancelada</string>
    <string name="alert_gps_deshabilitado">Habilita el GPS, para continuar</string>
    <string name="alert_elemento_buscar">Digite el elemento a buscar</string>
    <string name="alert_elemento_no_encontrado">No existe información</string>
    <string name="alert_cerrar_sesion">¿ Está seguro(a) de cerrar su sesión ?</string>
    <string name="alert_observacion">Digite una observación</string>
    <string name="alert_fotografia">Incluya una fotografía</string>
    <string name="alert_tipo_reporte_dano">Seleccione un tipo de reporte</string>
    <string name="alert_sentido">Seleccione el Sentido del Mobiliario</string>
    <string name="alert_unidad_medida">Seleccione la Unidad de Medida</string>
    <string name="alert_cantidad">Digite la cantidad de Mobiliario</string>
    <string name="file_provider_authority" translatable="false">co.dolmen.sid</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="cargar_imagen">Cargar Imagen</string>
    <string name="alert_censo_asignado">Seleccione el No de Censo Asignado</string>
    <string name="alert_censo_tecnico_elemento_no">Digite el número del elemento</string>
    <string name="alert_censo_tipologia">Seleccione una Tipología</string>
    <string name="alert_censo_mobiliario">Seleccione un Mobiliario</string>
    <string name="alert_censo_referencia">Seleccione una Referencia</string>
    <string name="alert_censo_estado_mobiliario">Seleccione un estado de Mobiliario</string>
    <string name="alert_censo_barrio">Seleccione un barrio</string>
    <string name="alert_censo_direccion">Digite una Dirección</string>
    <string name="alert_censo_clase_via">Seleccione la Clase de Via</string>
    <string name="alert_censo_tipo_poste">Seleccione el tipo de Poste</string>
    <string name="alert_censo_norma_tipo_poste">Seleccione la norma de construcción del tipo de poste</string>
    <string name="alert_censo_interdistancia">Digite la Interdistancia</string>
    <string name="alert_censo_tipo_armado_red">Agregue el tipo de Armado de la Red</string>
    <string name="alert_censo_mt_transformador">Digite el Serial MT del Transformador</string>
    <string name="alert_censo_ct_transformador">Digite el Serial CT del Transformador</string>
    <string name="alert_censo_foto_1">Cargue la Foto 1</string>
    <string name="alert_censo_foto_2">Cargue la Foto 2</string>
    <string name="alert_error_almacenando_datos">Error Guardando los Datos</string>
    <string name="alert_almacenamiento_local">Datos Guardados en el Dispositivo</string>
    <string name="alert_datos_pendientes_sincronizar">Pendientes por Sincronizar</string>
    <string name="alert_almacenamiento_remoto">Datos Sincronizados.</string>
    <string name="alert_sin_datos_por_sincronizar">No hay datos que Sincronizar!!</string>
    <string name="titulo_contrato">Contrato No</string>
    <string name="titulo_acta_contrato">Acta No</string>
    <string name="titulo_proceso">Proceso</string>
    <string name="titulo_municipio">Municipio</string>
    <string name="titulo_barrio">Barrio</string>
    <string name="titulo_tipologia">Tipología</string>
    <string name="titulo_mobiliario">Mobiliario</string>
    <string name="titulo_referencia">Referencia</string>
    <string name="titulo_estado">Estado</string>
    <string name="titulo_sentido">Sentido</string>
    <string name="titulo_tercero">Tercero</string>
    <string name="titulo_cantidad">Cantidad</string>
    <string name="titulo_medida">U. Medida</string>
    <string name="titulo_cruce">Tipo Intersección</string>
    <string name="titulo_tipo_poste">Tipo Poste</string>
    <string name="titulo_poste_no">Poste No</string>
    <string name="titulo_transformador_no">Transformador No</string>
    <string name="titulo_potencia_transformador">Potencia Transformador</string>
    <string name="titulo_serial_medidor">Serial Medidor No</string>
    <string name="titulo_lectura_medidor">Lectura Medidor</string>
    <string name="titulo_tipo_red">Tipo Red</string>
    <string name="titulo_clase_via">Clase Vía</string>
    <string name="titulo_estado_elemento">Estado</string>
    <string name="titulo_cruce_no">Intersección No</string>
    <string name="titulo_placa_no">Placa No</string>
    <string name="titulo_latitud">Latitud</string>
    <string name="titulo_longitud">Longitud</string>
    <string name="titulo_observacion">Observación</string>
    <string name="titulo_fotografia">Foto</string>
    <string name="titulo_tipo_actividad">Tipo Actividad</string>
    <string name="titulo_tipo_reporte">Tipo Reporte</string>
    <string name="titulo_programa">Programa</string>
    <string name="alert_programa_operativo">Seleccione el programa</string>
    <string name="alert_tipo_actividad">Seleccione el tipo de actividad</string>
    <string name="titulo_actividad">Actividad</string>
    <string name="titulo_ancho_via">Ancho Via*</string>
    <string name="titulo_interdistancia">Intedistancia</string>
    <string name="alert_ancho_via">Ancho de la Via</string>
    <string name="alert_interdistancia">Interdistancia</string>
    <string name="titulo_altura_poste">Altura Poste</string>
    <string name="titulo_coordenadas">Coordenadas</string>
    <string name="titulo_actualizar_posicion">Actualizar Posición</string>
    <string name="alert_coordenadas">Tome el punto geográfico</string>
    <string name="separador">-</string>
    <string name="titulo_conexion_electrica">Conexión Eléctrica</string>
    <string name="titulo_proveedor">Proveedor Instalador</string>
    <string name="btn_censo_carga">Censo de Carga</string>
    <string name="alert_tipo_calibre">Seleccione el calibre del conductor eléctrico</string>
    <string name="titulo_censo_asignado">Censo Asignado</string>
    <string name="titulo_elemento">Elementos</string>
    <string name="titulo_estado_actividad">Estado Actividad</string>
    <string name="titulo_vatiaje">Vatiaje</string>
    <string name="titulo_unidad_medida">Unidad Medida</string>
    <string name="titulo_tipo_interseccion">Tipo Intersección</string>
    <string name="titulo_tipo_espacio">Tipo Espacio</string>
    <string name="titulo_tipo_tension">Tipo Tensión</string>
    <string name="titulo_tipo_retenida">Tipo Retenida</string>
    <string name="titulo_norma_construccion_poste">Norma Construcción Poste</string>
    <string name="titulo_tipo_estructura">Tipo Estructura</string>
    <string name="titulo_norma_construccion_red">Norma Construcción Red</string>
    <string name="titulo_calibre">Calibre</string>
    <string name="titulo_conductor_electrico">Tipo Conductor Eléctrico</string>
    <string name="titulo_tipo_escenario">Tipo Escenario</string>
    <string name="titulo_tipo_stock">Tipo Stock</string>
    <string name="titulo_articulo">Códigos de Inventario</string>
    <string name="descargando_actividades">Descargando Actvidades</string>
    <string name="titulo_mis_actividades">Mis Actividades</string>
    <string name="titulo_mi_inventario">Mi Inventario</string>
    <string name="btn_ejecutar">Ejecutar</string>
    <string name="title_activity_ejecuta_actividad">EjecutaActividad</string>
    <string name="tab_text_1">Foto Antes</string>
    <string name="tab_text_2">Foto Despues</string>
    <string name="tab_text_3">Material</string>
    <string name="tab_text_4">Info</string>
    <string name="movimiento_salida">Salida(-)</string>
    <string name="movimiento_entrada">Entrada(+)</string>
    <string name="alert_tipo_stock">Seleccione el tipo de Stock</string>
    <string name="alert_tipo_movimiento">Seleccione el tipo de movimiento</string>
    <string name="alert_articulo">Seleccione un artículo</string>
    <string name="alert_cantidad_articulo">Digite la cantidad</string>
    <string name="alert_eliminiar_articulo">¿Está seguro(a) de Eliminar el Artículo?</string>
    <string name="cantidad_insuficiente">Cantidad Insufuciente para realizar la transacción\nCantidad en Stock es:</string>
    <string name="titulo_bodega">Bodega</string>
</resources>