<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReporteDano">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/idSeparador4"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="|"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNombreMunicipio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="8sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idSeparador"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="|"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNombreProceso"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="8sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idSeparador2"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="|"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNombreContrato"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="8sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_buscar_elemento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/buscar_elemento"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:hint="@string/buscar_elemento"
                android:inputType="number"
                tools:text="@string/buscar_elemento" />

            <ImageButton
                android:id="@+id/btn_buscar_elemento"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default_small"
                android:contentDescription="@string/buscar_elemento"
                android:tint="#FF5722"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/txtIdElmento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_tipologia" />

                        <EditText
                            android:id="@+id/txtTipologia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_mobiliario" />

                        <EditText
                            android:id="@+id/txtMobiliario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_referencia" />

                        <EditText
                            android:id="@+id/txtReferencia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_barrio" />

                        <EditText
                            android:id="@+id/txtBarrio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_direccion" />

                        <EditText
                            android:id="@+id/txtDireccion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_estado_elemento" />

                        <EditText
                            android:id="@+id/txtEstadoMobiliario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_tipo_reporte" />

                        <Spinner
                            android:id="@+id/sltTipoReporte"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:drawable/btn_dropdown" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/titulo_observacion" />

                        <EditText
                            android:id="@+id/txtObservacion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textMultiLine" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">


                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default_small"
                android:drawableLeft="@android:drawable/ic_menu_revert"
                android:text="@string/btn_cancelar"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default_small"
                android:drawableLeft="@android:drawable/ic_menu_save"
                android:text="@string/btn_guardar"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>