<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurarArea">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgUsuario"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/usuario"
                    app:srcCompat="@drawable/user" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNombreUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nombre_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_usuario" />
            </LinearLayout>


            <!--Municipio-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/municipio" />

                <Spinner
                    android:id="@+id/sltMunicipio"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />

            </LinearLayout>
            <!--Proceso-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proceso" />

                <Spinner
                    android:id="@+id/sltProceso"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />

            </LinearLayout>

            <!--Contrato-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrato" />

                <Spinner
                    android:id="@+id/sltContrato"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />

            </LinearLayout>

            <!--Bodega-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_bodega" />

                <Spinner
                    android:id="@+id/sltBodega"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />

            </LinearLayout>

         </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_cerrar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/colorIconText"
        app:backgroundTint="@color/colorAccentCancel"
        app:srcCompat="@drawable/icon_menu_cerrar_sesion"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/colorIconText"
        app:backgroundTint="@color/colorAccentOk"
        app:srcCompat="@drawable/icon_redo"
        tools:ignore="VectorDrawableCompat" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>